@@ -1915,6 +1915,9 @@ static struct Damage battle_calc_weapon_attack(struct block_list *src,struct blo
 				case NC_AXETORNADO:
 					skillratio += (100 + 100 * skill_lv) + sstatus->vit;
 					break;
+				case SC_FATALMENACE:
+					skillratio += 100 * skill_lv;
+					break;
 				case SC_TRIANGLESHOT:
 					skillratio += 270 + 30 * skill_lv;
 					break;
