@@ -427,6 +427,7 @@ int skillnotok (int skillid, struct map_session_data *sd)
 			}
 			return 0;
 		case AL_TELEPORT:
+		case SC_FATALMENACE:
 		case SC_DIMENSIONDOOR:
 			if(map[m].flag.noteleport) {
 				clif_skill_teleportmessage(sd,0);
@@ -2123,6 +2124,9 @@ int skill_attack (int attack_type, struct block_list* src, struct block_list *ds
 			skill_addtimerskill(src,tick + 800,bl->id,0,0,skillid,skilllv,0,flag);
 	}
 
+	if( skillid == SC_FATALMENACE && damage > 0 && !flag&1 && !(tstatus->mode&MD_BOSS) )
+		skill_addtimerskill(src,tick + 800,bl->id,bl->x,bl->y,skillid,skilllv,0,flag);
+
 	if(skillid == CR_GRANDCROSS || skillid == NPC_GRANDDARKNESS)
 		dmg.flag |= BF_WEAPON;
 
@@ -2509,7 +2513,7 @@ static int skill_timerskill(int tid, unsigned int tick, int id, intptr data)
 			break;
 		if(skl->target_id) {
 			target = map_id2bl(skl->target_id);
-			if(!target && skl->skill_id == RG_INTIMIDATE)
+			if( (skl->skill_id == RG_INTIMIDATE || skl->skill_id == SC_FATALMENACE) && (!target || target->prev == NULL) )
 				target = src; //Required since it has to warp.
 			if(target == NULL)
 				break;
@@ -2582,6 +2586,34 @@ static int skill_timerskill(int tid, unsigned int tick, int id, intptr data)
 				case GN_SPORE_EXPLOSION:
 					map_foreachinrange(skill_area_sub, target, skill_get_splash(skl->skill_id, skl->skill_lv), BL_CHAR,
 						src, skl->skill_id, skl->skill_lv, 0, skl->flag|1|BCT_ENEMY, skill_castend_damage_id);
+					break;
+				case SC_FATALMENACE:
+					{
+						short x,y;
+						int i=0;
+						do{
+							x = rand()%(map[src->m].xs-2)+1;
+							y = rand()%(map[src->m].ys-2)+1;
+						}while(map_getcell(src->m,x,y,CELL_CHKNOPASS) && (i++)<1000 );
+						
+						if( unit_warp(src,-1,x,y,3) == 0 )
+						{
+							skill_area_temp[4] = x;
+							skill_area_temp[5] = y;
+							if( status_isdead(target) || target == src ) // If the target is dead uses the target position as area center.
+							{
+								i = skill_get_splash(skl->skill_id,skl->skill_lv);
+								map_foreachinarea(skill_area_sub,src->m,skl->x-i,skl->y-i,skl->x+i,skl->y+i,splash_target(src),src,skl->skill_id,skl->skill_lv,tick,skl->flag|BCT_ENEMY|1,skill_castend_damage_id);
+							}
+							else
+							{
+								skill_area_temp[1] = target->id;
+								map_foreachinrange(skill_area_sub, target,skill_get_splash(skl->skill_id,skl->skill_lv),splash_target(src),src,skl->skill_id,skl->skill_lv,tick,skl->flag|BCT_ENEMY|1,skill_castend_damage_id);
+							}
+							if( target != src && !status_isdead(target) )
+								unit_warp(target, -1, x, y, 3);
+						}
+					}
 					break;
 				default:
 					skill_attack(skl->type,src,src,target,skl->skill_id,skl->skill_lv,tick,skl->flag);
@@ -3633,6 +3665,19 @@ int skill_castend_damage_id (struct block_list* src, struct block_list *bl, int 
 	case WM_LULLABY_DEEPSLEEP:
 		if( rand()%100 < 88 + 2 * skilllv )
 			sc_start(bl,status_skill2sc(skillid),100,skilllv,skill_get_time(skillid,skilllv));
+		break;
+
+	case SC_FATALMENACE:
+		if( !flag&1 )
+			skill_attack(BF_WEAPON,src,src,bl,skillid,skilllv,tick,flag);
+		else
+		{
+			if( bl->id != skill_area_temp[1] && skill_attack(BF_WEAPON,src,src,bl,skillid,skilllv,tick,flag) )
+			{
+				if( bl != src && !status_isdead(bl) )
+				unit_warp(bl, -1, (short)skill_area_temp[4], (short)skill_area_temp[5], 3);
+			}
+		}
 		break;
 
 	case 0:
